[package]
name = "polymonitor"
version = "0.1.0"
authors = ["Bee <pizzaman8099@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
reqwest = "0.10.10"
futures = "0.3.8"
tokio = { version = "1", features = ["full"] }
